# face_rec

./: .gitignore  CMakeLists.txt
data/: 12net.prototxt  deploy.prototxt  one_man_img.csv
include/: envs.h  faceNet.h  mtcnn.h  tools.h
src/: camera.cpp  csv.cpp  faceNet.cpp  mtcnn.cpp  tools.cpp  utils.cpp
